feat: Implement user groups
Implement user groups on the map, where each user can see all other users in a group and spectate their locations.

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -61,6 +61,15 @@
   );
 }
 
+@utility scrollbar-hidden {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 html,
 body {
   height: 100%;
