--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -59,6 +59,13 @@
     #e76616 43%,
     #be510e 98.56%
   );
+
+  --button-purple-gradient: linear-gradient(
+    180deg,
+    #8a1076 8%,
+    #6f0c5e 43%,
+    #5b094d 98.56%
+  );
 }
 
 @utility scrollbar-hidden {
@@ -120,7 +127,7 @@ body {
   }
 
   main {
-    @apply px-[10%] py-8;
+    @apply px-[5%] pb-8;
   }
 }
 
