--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -35,22 +35,20 @@
   /* SHADOWS */
   --inset-shadow-xs: 0px 1px 2px 0px rgba(0, 0, 0, 0.24) inset;
   --inset-shadow-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.15) inset;
-  --inset-shadow-md:
-    0px 3px 6px 0px rgba(0, 0, 0, 0.1) inset,
+  --inset-shadow-md: 0px 3px 6px 0px rgba(0, 0, 0, 0.1) inset,
     0px 10px 20px 0px rgba(0, 0, 0, 0.15) inset;
-  --inset-shadow-lg:
-    0px 5px 10px 0px rgba(0, 0, 0, 0.05) inset,
+  --inset-shadow-lg: 0px 5px 10px 0px rgba(0, 0, 0, 0.05) inset,
     0px 15px 25px 0px rgba(0, 0, 0, 0.15) inset;
   --inset-shadow-xl: 0px 20px 40px 0px rgba(0, 0, 0, 0.2) inset;
 
-  --shadow-xs:
-    0px 1px 2px 0px rgba(0, 0, 0, 0.24), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-  --shadow-sm:
-    0px 2px 4px 0px rgba(0, 0, 0, 0.15), 0px 3px 6px 0px rgba(0, 0, 0, 0.15);
-  --shadow-md:
-    0px 3px 6px 0px rgba(0, 0, 0, 0.1), 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
-  --shadow-lg:
-    0px 5px 10px 0px rgba(0, 0, 0, 0.05), 0px 15px 25px 0px rgba(0, 0, 0, 0.15);
+  --shadow-xs: 0px 1px 2px 0px rgba(0, 0, 0, 0.24),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  --shadow-sm: 0px 2px 4px 0px rgba(0, 0, 0, 0.15),
+    0px 3px 6px 0px rgba(0, 0, 0, 0.15);
+  --shadow-md: 0px 3px 6px 0px rgba(0, 0, 0, 0.1),
+    0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+  --shadow-lg: 0px 5px 10px 0px rgba(0, 0, 0, 0.05),
+    0px 15px 25px 0px rgba(0, 0, 0, 0.15);
   --shadow-xl: 0px 20px 40px 0px rgba(0, 0, 0, 0.2);
 }
 
